[gd_scene load_steps=20 format=3 uid="uid://0nka4rtgo7vg"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_7xlh3"]
[ext_resource type="Texture2D" uid="uid://do748j32dk0s5" path="res://assets/AnimationSheet.png" id="1_req7c"]
[ext_resource type="PackedScene" path="res://scenes/Gama/staff.tscn" id="3_6po7h"]
[ext_resource type="PackedScene" uid="uid://cflwrb4c6hj8h" path="res://scenes/Gama/life_bar.tscn" id="4_ekywa"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2vxdc"]
size = Vector2(30, 30)

[sub_resource type="AtlasTexture" id="AtlasTexture_qm1nf"]
atlas = ExtResource("1_req7c")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb4d6"]
atlas = ExtResource("1_req7c")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6gcs"]
atlas = ExtResource("1_req7c")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnhgb"]
atlas = ExtResource("1_req7c")
region = Rect2(120, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0g88"]
atlas = ExtResource("1_req7c")
region = Rect2(144, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_3baau"]
atlas = ExtResource("1_req7c")
region = Rect2(168, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_klfs3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qm1nf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb4d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6gcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnhgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0g88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3baau")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_2yd3q"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(-3.97363e-08, 22), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_0wjke"]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(-23, -4), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_61853"]
resource_name = "attack_right"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(23, -4), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_coaak"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(-3.97363e-08, -32), Vector2(-1.90735e-06, -4)]
}

[sub_resource type="Animation" id="Animation_cvvqg"]
resource_name = "hit_wall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(6.82121e-13, -3), Vector2(-6, -3), Vector2(7, -3), Vector2(-1.43051e-06, -3)]
}

[sub_resource type="Animation" id="Animation_c7y14"]
resource_name = "player_hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3iu28"]
_data = {
"attack_down": SubResource("Animation_2yd3q"),
"attack_left": SubResource("Animation_0wjke"),
"attack_right": SubResource("Animation_61853"),
"attack_up": SubResource("Animation_coaak"),
"hit_wall": SubResource("Animation_cvvqg"),
"player_hit": SubResource("Animation_c7y14")
}

[node name="oldPlayer" type="Area2D"]
position = Vector2(-1, -1)
script = ExtResource("1_7xlh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 16)
shape = SubResource("RectangleShape2D_2vxdc")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(1.33333, 1.33333)
sprite_frames = SubResource("SpriteFrames_klfs3")
animation = &"idle"
centered = false

[node name="RayCast2DEnemy" type="RayCast2D" parent="."]
position = Vector2(16, 16)
target_position = Vector2(2.08165e-12, 32)
collide_with_areas = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(16, 16)
enabled = false
target_position = Vector2(2.08165e-12, 32)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3iu28")
}

[node name="StaffPositionTop" type="Node2D" parent="."]
position = Vector2(16, 16)

[node name="StaffPositionBottom" type="Node2D" parent="."]
position = Vector2(16, 16)

[node name="StaffPositionLeft" type="Node2D" parent="."]
position = Vector2(16, 16)

[node name="StaffPositionRight" type="Node2D" parent="."]
position = Vector2(16, 16)

[node name="Staff1" parent="." instance=ExtResource("3_6po7h")]
position = Vector2(16, -157)
scale = Vector2(1.2, 1.2)

[node name="Staff2" parent="." instance=ExtResource("3_6po7h")]
position = Vector2(97, -157)
scale = Vector2(1.2, 1.2)

[node name="Staff3" parent="." instance=ExtResource("3_6po7h")]
position = Vector2(177, -157)
scale = Vector2(1.2, 1.2)

[node name="Staff4" parent="." instance=ExtResource("3_6po7h")]
position = Vector2(257, -157)
scale = Vector2(1.2, 1.2)

[node name="RayCast2DMagic" type="RayCast2D" parent="."]
position = Vector2(16, 16)
scale = Vector2(0.833333, 0.833333)
target_position = Vector2(2.08165e-12, 32)
collide_with_areas = true

[node name="LifeBar" parent="." instance=ExtResource("4_ekywa")]
offset_top = -1.0
offset_bottom = -1.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
